--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h4>Хомячок Кэмпбелла (лат. Phodopus campbelli) — представитель рода Мохноногие хомячки. Видовое название дано в честь члена британской консульской службы в Китае Чарльза Уильяма Кэмпбелла (1861—1927), который собрал образцы хомяка на китайско-русской границе в 1904 году.</h4>
 <font size="5" color="cc0000" face="fantasy">Внешний вид</font>
 <p>
-<img spc="hamstercambella.jpg" widht="250" height="250">
+<img src="hamstercambella.jpg" widht="250" height="250">
 </p>
 <h4>Несмотря на сходство с представителями джунгарской породы, у хомяка Кемпбелла есть целый ряд особенностей:</h4>
 <ul type="circle">
